--- a/Jonathan.html
+++ b/Jonathan.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Touch it!</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scable=no">
+	<meta name="viewport" content="width=device-width, maximum-scale=1 , initial-scale=1, user-scable=no">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
