--- a/Jonathan.html
+++ b/Jonathan.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, user-scalable=no">
 	<title>Touch it!</title>
-	<meta name="viewport" content="width=device-width, maximum-scale=1 , initial-scale=1, user-scable=no">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
